# mlagent

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: datasets.yaml  pipelines.yaml
docs/: BENCHMARKS.md
mlagent/: __init__.py  config.py
mlagent/agents/: __init__.py  llm_log.py  optimization.py  orchestrator.py  prompts.py  subagents.py  tools.py  workspace_guide.py
mlagent/cli/: main.py
mlagent/observability/: __init__.py  langsmith.py
mlagent/pipeline/: __init__.py  datasets.py  models.py  runner.py  stages.py  templates.py  validation.py
mlagent/reporting/: __init__.py  html_report.py  markdown_report.py
mlagent/sandbox/: __init__.py  executor.py  isolation.py
mlagent/storage/: __init__.py  workspace.py
scripts/: run_benchmarks.py
tests/: test_langsmith.py  test_optimization.py  test_sandbox.py  test_validation.py  test_workspace_guide.py
