[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlagent"
version = "0.1.0"
description = "Multi-agent tabular ML pipeline automation with LangChain Deep Agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "UBM ML Agent" }]
dependencies = [
    "deepagents>=0.6.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-openrouter>=0.2.0",
    "langgraph>=0.2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
mlagent = "mlagent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["mlagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
